@@ -8,6 +8,7 @@ Release 2.1.6
  * Fix form multipart issue (https://github.com/hdiv/hdiv/issues/44).
  * New 'org.hdiv.regex' package for Java regular expression execution abstraction.
  * New 'hdiv-docs' module with official documentation.
+ * Include original parameter value in attack logs
 
 Release 2.1.5
 ==================================
